--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,4 @@
 {
+    "python.pythonPath": "C:\\Users\\Maldus\\AppData\\Local\\Programs\\Python\\Python38-32\\python.exe"
     //"python.pythonPath": ".env/bin/python"
 }
